# distiller-cm5-python

./: .gitignore  README.md  golfapi.py  install.sh  llms.txt  main.py  pyproject.toml  requirements.txt  run.sh  spin_up.sh  test.txt
client/: README.md  cli.py
client/llm_infra/: llama_manager.py  parsing_utils.py
client/mid_layer/: llm_client.py  mcp_client.py  processors.py
client/ui/: App.py  AppInfoManager.py  ServerSelectionPage.qml  SettingsPage.qml  TODO.md  VoiceAssistantPage.qml  __init__.py  main.qml  qt.conf
client/ui/Components/: AboutSection.qml  AppButton.qml  AppDialog.qml  AppHeader.qml  AppInfo.qml  AppRoundButton.qml  AppScrollView.qml  AppSection.qml  InputArea.qml  (+23 more)
distiller_cm5_python/client/: README.md  cli.py
distiller_cm5_python/llm_server/: README.md  server.py
distiller_cm5_python/mcp_server/: README.md  README_conversation.md  README_talk.md  README_wifi.md  beep_server.py  caddy2_server.py  caddy3_server.py  conversation_server.py  led-use_server.py  talk_server.py  tts-use_server.py  wifi-use_server.py  wifi_mac_server.py  wifi_server.py
distiller_cm5_python/utils/: README.md  config.py  default_config.json  logger.py  server_utils.py  uart_utils.py
event_logs/: event_log_20250526_194617.jsonl  event_log_20250526_195355.jsonl
llm_server/: README.md
llm_server/template/: gemma3-template.txt  hammer2.1-template.txt
mcp_server/: README.md  airconditioning_server.py  speaker_server.py  wifi_mac_server.py  wifi_server.py
utils/: README.md  config.py  default_config.json  distiller_exception.py  logger.py  speak_config.json
(+83 files in other folders)
