[project]
name = "distiller_cm5_python"
version = "0.1.0"
description = "python exe of distiller python client"
author = [
    {name = "PAMIRAI INC", email = "founders@pamir.ai"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyqt6>=6.9.0",
    "qasync>=0.27.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.ruff]
line-length = 100
target-version = "py311"
